CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(aura-test)
SET(PROJECT_VERSION   0.1.2)

SET(SRCS main.c)

FIND_PACKAGE(PkgConfig)
PKG_CHECK_MODULES(AURA REQUIRED aura)

SET(CMAKE_C_FLAGS "-Wall -Werror")

INCLUDE_DIRECTORIES(
    ${AURA_INCLUDE_DIRS}
)

ADD_EXECUTABLE(aura-example ${SRCS})

TARGET_LINK_LIBRARIES(aura-example
    ${AURA_LIBRARIES}
)

INSTALL(TARGETS aura-example
        DESTINATION bin)